Fix wide buttons on small screens

--- a/src/assets/main.sass
+++ b/src/assets/main.sass
@@ -61,6 +61,9 @@ footer
   margin-top: 20px
   font-size: 120%
 
+.pure-button
+  white-space: initial
+
 .tg-link
   text-align: center
   margin: 20px 0
